--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,42 @@
 @tailwind components;
 @tailwind utilities;
 
+.hidescroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidescroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.example {
+  scroll-snap-type: x mandatory;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: scroll;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.example::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
+
+
+.example div {
+  scroll-snap-align: center;
+}
+
+.example::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+}
+
+.example::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 
 .font-main {
   font-family: "Italiana", sans-serif;
