--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.crossback{
+  background: radial-gradient(circle, transparent 20%, #ffffff 20%, #ffffff 80%, transparent 80%, transparent) 0% 0% / 56px 56px, radial-gradient(circle, transparent 20%, #ffffff 20%, #ffffff 80%, transparent 80%, transparent) 28px 28px / 56px 56px, linear-gradient(#532200 0.5px, transparent 0.5px) 0px -0.25px / 28px 28px, linear-gradient(90deg, #532200 0.5px, #ffffff 0.5px) -0.25px 0px / 28px 28px #ffffff;
+  background-size: 56px 56px, 56px 56px, 28px 28px, 28px 28px;
+  background-color: #ffffff;
+}
+.hideeffect{
+  background: rgba(255, 255, 255, 0);
+  background: -webkit-linear-gradient(226deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.96) 100%);
+  background: linear-gradient(226deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.96) 100%);
+}
 .hidescroll::-webkit-scrollbar {
   display: none;
 }
